--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 <link rel="stylesheet" href="styles.css">
 <script src="https://kit.fontawesome.com/4d99540586.js" crossorigin="anonymous"></script>
+<style>
+
+  </style>
  </head>
 <body>
     <div id="Home">
@@ -16,51 +19,27 @@
 </div>
 
 <div class="navbar">
-<a href="#Home">Home</a>
-<a href="#About">About Us</a> 
-<a href="#Contact">Contsct Us</a>
+<a href="index.html">Home</a>
+<a href="About.html">About Us</a> 
+
 </div>
-<div class="row">
-  <div class="side">
-      <div id="About">
-    <p><a href="#Bottom">To bottom</a></p>
-    <h2>About 250_Jewelleries</h2>
-    <p>About 250_Jewelleries is an Online Shop with high-quality jewellery and watches for him and her.</p>
-    <p>Whether it be bracelets, necklaces, earrings, engagement rings, name jewellery or collection and we deliver</p>
-    <p>We have the best collection of Gold, Silver & Diamond Jewelry<p>
-      <h2> The list of our product </h2>
-      <ul>
-        <li>Anklet.</li>
-        <li>Barrette.</li>
-        <li>Belly chain.</li>
-        <li>Bindi.</li>
-        <li>Bracelet.</li>
-        <li>Brooch.</li>
-        <li>Drop Earrings</li>
-        <li>Cluster Earrings</li>
-        <li>Dangle Earrings</li>
-        <li>Hoop Earrings</li>
-        <li>Huggie Earrings</li>
-        <li>Chandelier Earrings</li>
-        <li> hreader Earrings</li>
-      </ul>  
-
+<div >
+    <h1 style="text-align:center;">Welcome to 250_Jewelleries</h1>
+    <p class="flex-container">
+      <img class="body" id="responvise" src="https://i.etsystatic.com/6129803/d/il/fff896/2782768485/il_340x270.2782768485_gft0.jpg?version=0">
+      <img class="body" id="responvise" src="https://i.etsystatic.com/21555592/c/806/640/86/468/il/904507/2706239087/il_340x270.2706239087_k4wi.jpg">
+      <img class="body" id="responvise" src="https://i.pinimg.com/originals/7e/3e/bc/7e3ebc98f0a696d5aa464b39ae60fe6e.jpg">
+      <img class="body" id="responvise" src="https://i.pinimg.com/736x/29/ed/e8/29ede809cf0f43e63909f45e24be155f.jpg">
+      
+      </p>
       <p class="flex-container">
-<img class="body" id="responvise" src="https://i.etsystatic.com/6129803/d/il/fff896/2782768485/il_340x270.2782768485_gft0.jpg?version=0">
-<img class="body" id="responvise" src="https://i.etsystatic.com/21555592/c/806/640/86/468/il/904507/2706239087/il_340x270.2706239087_k4wi.jpg">
-<img class="body" id="responvise" src="https://i.pinimg.com/originals/7e/3e/bc/7e3ebc98f0a696d5aa464b39ae60fe6e.jpg">
-<img class="body" id="responvise" src="https://i.pinimg.com/736x/29/ed/e8/29ede809cf0f43e63909f45e24be155f.jpg">
+      <img  class="body" id="responvise" src="https://images.diamondstuds.com/images/homepage/ds.jpg">
+      <img  class="body" id="responvise" src="https://images-na.ssl-images-amazon.com/images/I/513-cKLACqL._AC_UY395_.jpg">
+      <img  class="body" id="responvise" src="https://images.dresshead.com/images/Earrings/990100028/large/2.jpg">
+      <img  class="body" id="responvise" src="https://www.companybe.com/IrishOnGrand/product_photos/rd_images/rd_trinity_stud_earrings.jpg">
+      </p>
+    <div class="footer">
 
-</p>
-<p class="flex-container">
-<img  class="body" id="responvise" src="https://images.diamondstuds.com/images/homepage/ds.jpg">
-<img  class="body" id="responvise" src="https://images-na.ssl-images-amazon.com/images/I/513-cKLACqL._AC_UY395_.jpg">
-<img  class="body" id="responvise" src="https://images.dresshead.com/images/Earrings/990100028/large/2.jpg">
-<img  class="body" id="responvise" src="https://www.companybe.com/IrishOnGrand/product_photos/rd_images/rd_trinity_stud_earrings.jpg">
-</p>
-   <div id="Contact">
-<div class="footer">
-  <a name="Bottom"></a>
     <h1 class="footer-contact-heading">Contact Us</h1>
     <p class="footer-contact-info">Email: barbieusanase@gamil.com</p>
     <p class="footer-contact-info">Mobile: 0788 571 487</p>
